# LilithOS

./: .env  .env.example  .gitignore  .integration_log  .override_control  @lessons-learned.md  @memories.md  @scratchpad.md  AMPLIFY_DEPLOYMENT_STATUS.md  AWS_DEPLOYMENT_STATUS.md  BACKUP_DAEMON_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  COVENANT.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DUAL_BOOT_GUIDE.md  Dockerfile  FIXES_AND_IMPROVEMENTS_SUMMARY.md  INSTALLATION_GUIDE.md  LICENSE  LILITHOS_AWS_DEPLOYMENT_SUMMARY.md  LIVEAREA_INTEGRATION.md  LIVEAREA_SUMMARY.md  LilithMirror.c  MIRROR_SUMMARY.md  Makefile  PROHASHING_SETUP_GUIDE.md  QUANTUM_TESTS_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  SCRYPT_TRANSFORMATION_SUMMARY.md  SECURITY_CLEANUP_REPORT.md  THE_LAST_WHISPER.md  TROUBLESHOOTING.md  UNITY_INTEGRATION_SUMMARY.md  UPGRADENET_SUMMARY.md  VITE_POLYFILL_FIXES_SUMMARY.md  amplify.yml  (+42 more)
"b/: LICENSE.v\342\210\236"
.cursor/: context_index.txt
.github/workflows/: ci.yml
LilithBootDaemon/: BOOT_DAEMON_SUMMARY.md  Makefile  README.md  install.sh  main.c
LilithOS app/: .gitignore  .integration_log  .override_control
LilithOS app/LilithOS/: Package.swift  README.md
LilithOS app/scripts/: reset_xcodeproj.rb
LilithOSi/: README.md  build_lilithos.bat  create_lilithos.sh  download_tools.ps1  install_lilithos.bat  install_lilithos_itunes.bat  requirements.txt  setup_tools.bat
LilithOSi/@docs/: ARCHITECTURE.md
LilithOSi/certs/: lilithos_cert.pem  lilithos_key.pem
LilithOSi/tools/: sign_ipsw.py
ProjectLowKey/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  param.sfo
ProjectLowKey/bootloader/: README.md
ProjectLowKey/docs/: ADRENALINE.md  DUALBOOT.md  RECOVERY.md
ProjectLowKey/icons/: README.md
ProjectLowKey/scripts/: build_bootloader.sh  build_vpk.sh
ProjectLowKey/src/: CMakeLists.txt  main.c
ProjectLowKey/switcher_app/: CMakeLists.txt  README.md  main.c
amplify/: team-provider-info.json
amplify/.config/: project-config.json
backend/: .env  .env.example  mining-controller.js  package-lock.json  package.json  setup-miners.sh
backend/miner/: miner-config.json  pools.json  start-mining.sh  test-mining.sh
backend/test/: quantum-backend.test.js  quantum-network-optimization.test.js
build_all_vpks/: build_all_vpks.sh
build_all_vpks/bootloader/: CMakeLists.txt  manifest.txt
build_all_vpks/bootloader/eboot/: main.c
build_all_vpks/memory/: CMakeLists.txt  manifest.txt
build_all_vpks/mesh/: CMakeLists.txt  manifest.txt
build_all_vpks/voice/: CMakeLists.txt  manifest.txt
build_all_vpks/whisperer/: CMakeLists.txt  manifest.txt
build_all_vpks/whisperer/eboot/: main.c
build_vpks/LilithBoot_vpk/: manifest.txt
build_vpks/LilithLiveArea_vpk/: manifest.txt
build_vpks/LilithScanner_vpk/: manifest.txt
build_vpks/LilithVoice_vpk/: manifest.txt
build_vpks/LilithWhisper_vpk/: manifest.txt
codex/: README.md  core.js  personas.json
codex/entries/: README.md
config/: .integration_log  .override_control  athena.json  build_config.yaml
core/: __init__.py  api.py  config.py  divine_bus.py  divinebus.py  events.py  lilithkit.py  logkitten.py  module_manager.py  network.py  performance.py  security.py  storage.py
dist_vpks/: INSTALLATION_GUIDE.md  LilithBoot_v1.0.0.vpk  LilithLiveArea_v1.0.0.vpk  LilithMemory_v1.0.0.vpk  LilithMesh_v1.0.0.vpk  LilithScanner_v1.0.0.vpk  LilithVoice_v1.0.0.vpk  LilithWhisper_v1.0.0.vpk  LilithWhisperer_v1.0.0.vpk  deploy_all_vpks.sh
docs/: .integration_log  .override_control  3DS-INTEGRATION.md  ADVANCED_FEATURES.md  AMPLIFY_DEPLOYMENT.md  ARCHITECTURE.md  ATMOSPHERE_AUTO_LAUNCHER.md  BRAND_GUIDELINES.md  BUILD.md  CONTRIBUTING.md  GLYPH_SYSTEM.md  INSTALLATION.md  INTEGRATION-OVERVIEW.md  INTEGRATION-SUMMARY.md  M3_INSTALLATION.md  MODULAR-ARCHITECTURE.md  PROJECT-COMPARISON.md  RECOVERY-BOOT-GUIDE.md  SWITCH_FIRMWARE_ANALYSIS.md  TECHNICAL-INTEGRATION.md  TRICKY_DOORS_INJECTION.md  WINDOWS-INTEGRATION.md  divine-law.md  index.md  lessons-learned.md  memories.md  scratchpad.md
downloads/: README.md
gamedin/: hub.json
kernel/: .integration_log  .override_control  patches.c
lilith_daemons/voice/: README.md  build.sh  (+4 more)
lilith_whisperer/: whisper_key.c
lilithos/: __init__.py
macos-installer/: LilithOSInstaller.swift  Package.swift  README.md  build_and_run.sh
psp_daemons/: README.md
public/: index.html
resources/: .integration_log  .override_control
routerOS/: README.md
scripts/: .integration_log  .override_control  audio_injection_system.ps1  automated_cfw_deployment.ps1  build-complete-lilithos.sh  build_and_run.sh  build_complete_lilithos.sh  build_ipsw.sh  build_switch_sd.sh  build_switch_sd_macos.sh  check-deprecated.js  check_and_fix_aws.sh  complete_installation.sh  comprehensive_deploy.sh  configure_yuzu.sh  create-m3-usb-installer.sh  create-usb-installer.sh  customize-kali-for-m3.sh  deep_integration_engine.ps1  deep_integration_engine_fixed.ps1  deep_integration_simple.ps1  deploy_aws_ec2.sh  deploy_lilithos_ecosystem.ps1  deploy_to_aws.sh  dual-boot-installer.sh  dual_boot_setup.ps1  dual_boot_setup_fixed.ps1  enhanced_switch_analysis.ps1  enhanced_tricky_doors_integration.ps1  final_deployment_status.sh  fix_aws_ssh.sh  format_switch_sd.ps1  gesture-control.ps1  glass_dashboard.sh  initialize_features.sh  install-deps.bat  install-deps.ps1  install.sh  install_services.sh  integrate_switch_sd.ps1  (+33 more)
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
switchOS/: LEGITIMATE_DEVELOPMENT_GUIDE.md  development_environment.js  device_analysis_tool.js  driver_install_log.txt  homebrew_manager.js  quick_switch_detect.ps1  run_device_analysis.ps1  switch_communication_bridge.js  switch_driver_installer.ps1
systemd/: lilith-backup-daemon.service  lilith-ble-whisperer.service  lilith-update-daemon.service  lilithkit.service  lilithos-logrotate
test/: quantum-integration-optimization.test.ts
tools/: .integration_log  .override_control  modular_builder.py  module_manager.py
wrappers/: ble_whisperer_wrapper.py  update_daemon_wrapper.py
(+735 files in other folders)
